# token.ex

./: .gitignore  CMakeLists.txt  README.md  test.sh
contracts/: CMakeLists.txt
contracts/amax.token/: CMakeLists.txt
contracts/amax.token/include/amax.token/: amax.token.hpp
contracts/amax.token/src/: amax.token.cpp
tests/: amax.token_tests.cpp  contracts.hpp.in  test_symbol.hpp
tests/test_contracts/: CMakeLists.txt
